# moveit_gazebo_integration

./: CMakeLists.txt  moveit_interface.cpp  package.xml  panda.srdf  panda_control.launch
robot_description/: package.xml
robot_description/robots/: cam_plugin.gazebo  panda.transmission.xacro  panda_arm.xacro  panda_arm_hand.urdf.xacro
